<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InfoActivity"
    android:id="@+id/InfoDrawerLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bamboo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/txtTest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="200px"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="50dp"

                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoFonc1"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorWhite"
                android:lineSpacingExtra="12px"
                android:textAlignment="center"
                android:textSize="70px"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/infoFonc2"
                android:textAlignment="center"
                android:textSize="120px"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoFonc3"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorWhite"
                android:lineSpacingExtra="12px"
                android:textAlignment="center"
                android:textSize="60px"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/infoFonc4"
                android:textAlignment="center"
                android:textSize="100px"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoFonc5"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorWhite"
                android:lineSpacingExtra="12px"
                android:textAlignment="center"
                android:textSize="50px"/>

            <Button
                android:id="@+id/btnInfo"
                android:layout_width="match_parent"
                android:layout_height="140px"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/ItemHome"
                android:layout_margin="30dp"
                android:background="@drawable/button2"
                android:layout_marginTop="30dp"


                />



        </LinearLayout>
    </ScrollView>



    <android.support.design.widget.NavigationView
        android:id="@+id/nv2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        android:background="@drawable/back"

        >

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>