<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingActivity"
    android:background="@drawable/background">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:padding="16dp"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">

        <RadioGroup
            android:id="@+id/rdiGroup"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdiEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdEasy"
                android:theme="@style/MyRadioButton"
                android:background="@null"

                />

            <RadioButton
                android:id="@+id/rdiMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdMedium"
                android:theme="@style/MyRadioButton"
                android:background="@null"

                />

            <RadioButton
                android:id="@+id/rdihard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdHard"
                android:theme="@style/MyRadioButton"
                android:background="@null"

                />

        </RadioGroup>

    </android.support.v7.widget.CardView>

    <ToggleButton
        android:id="@+id/switchAlarm"
        android:layout_below="@+id/cardView"
        android:layout_centerHorizontal="true"
        android:textOn="On"
        android:textOff="Off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchAlarm"
        android:headerBackground="@drawable/background"
        android:amPmBackgroundColor="@color/greencolorPrimaryDark"
        android:numbersSelectorColor="@color/greencolorPrimaryDark"
        >

    </TimePicker>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonst"
        android:text="@string/yogaSave"
        android:textColor="@color/colorWhite" />

</RelativeLayout>