<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.YogaActivity"
    android:background="@drawable/back"
    android:id="@+id/yogaDrawer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <ImageView
        android:id="@+id/btnTraining"
        android:layout_centerInParent="true"
        android:src="@drawable/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <LinearLayout
           android:layout_weight="2"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

          <Button
               android:id="@+id/btnExercises"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginLeft="8dp"
               android:layout_marginRight="4dp"
               android:layout_weight="1"
               android:text="@string/btnExercises"
               android:textColor="@color/colorWhite"
              android:background="@drawable/buttonst"
               />

           <Button
               android:id="@+id/btnSetting"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginLeft="4dp"
               android:layout_marginRight="8dp"
               android:layout_weight="1"
               android:text="@string/btnSetting"
               android:textColor="@color/colorWhite"
               android:background="@drawable/buttonst"/>

       </LinearLayout>

        <Button
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/btnCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:text="@string/btnCalendar"
            android:textColor="@color/colorWhite"
            android:background="@drawable/buttonst"
             />

    </LinearLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nv4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        android:background="@drawable/back"
        >
    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>